--- a/code/ArcadiaBox/docker-compose.yaml
+++ b/code/ArcadiaBox/docker-compose.yaml
@@ -63,6 +63,16 @@ services:
     networks:
       - app_net
 
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: frontend
+    ports:
+      - "80:80"
+    networks:
+      - app_net
+
 volumes:
   db_data:
 
