Add Super Mario Bros support and enhance game tracking features

--- a/code/ArcadiaBox/Frontend/nginx.conf
+++ b/code/ArcadiaBox/Frontend/nginx.conf
@@ -7,5 +7,16 @@ server {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri /index.html;
+        
+        # Headers pour modules ES6 et CORS
+        add_header Cross-Origin-Opener-Policy "same-origin" always;
+        add_header Cross-Origin-Embedder-Policy "require-corp" always;
+    }
+    
+    # Permettre les .nes et .js
+    location ~* \.(nes|js)$ {
+        root /usr/share/nginx/html;
+        add_header Content-Type application/octet-stream;
+        add_header Access-Control-Allow-Origin "*";
     }
 }
