--- a/code/ArcadiaBox/Backend/server/package.json
+++ b/code/ArcadiaBox/Backend/server/package.json
@@ -1,14 +1,15 @@
 {
   "name": "arcadiabox",
   "version": "1.0.0",
+  "description": "",
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
